--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,16 @@
     <artifactId>123</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.37</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 
